// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldBooleanIndeterminate renders date string 1`] = `
<DocumentFragment>
  <div
    class="react-datepicker-wrapper d-block"
  >
    <div
      class="react-datepicker__input-container"
    >
      <input
        autocomplete="off"
        class="d-block form-control"
        id="dummy"
        type="text"
        value="January 30, 2023"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FieldBooleanIndeterminate renders empty with empty string date 1`] = `
<DocumentFragment>
  <div
    class="react-datepicker-wrapper d-block"
  >
    <div
      class="react-datepicker__input-container"
    >
      <input
        autocomplete="off"
        class="d-block form-control"
        id="dummy"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`FieldBooleanIndeterminate renders empty with null date 1`] = `
<DocumentFragment>
  <div
    class="react-datepicker-wrapper d-block"
  >
    <div
      class="react-datepicker__input-container"
    >
      <input
        autocomplete="off"
        class="d-block form-control"
        id="dummy"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
